# CodeSergeant

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BRIDGE_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  REDESIGN_IMPLEMENTATION.md  RELEASE_NOTES.md  TESTING.md  TESTING_CLEANUP.md  TROUBLESHOOTING.md  config.json  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_bridge.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: lint.yml  release.yml  test.yml
CodeSergeantUI/: CodeSergeantApp.swift  CodeSergeantUI.entitlements  Info.plist  Package.swift  README.md  fix_xcode_project.sh  project.yml
CodeSergeantUI/.swiftpm/xcode/xcuserdata/cuevalabs.xcuserdatad/xcschemes/: xcschememanagement.plist
CodeSergeantUI/CodeSergeantUI.xcodeproj/: project.pbxproj
CodeSergeantUI/CodeSergeantUI.xcodeproj/xcshareddata/xcschemes/: CodeSergeantUI.xcscheme
CodeSergeantUI/Models/: ConfigModel.swift  SessionModel.swift
CodeSergeantUI/Services/: GlassEffect.swift  PythonBridge.swift
CodeSergeantUI/Views/: DashboardView.swift  MenuBarView.swift  SettingsView.swift
CodeSergeantUI/Views/Components/: GlassCard.swift  LiquidButton.swift  TimerDisplay.swift  WarningStrobeOverlay.swift  XPDisplay.swift
assets/: README.md
bridge/: README.md  __init__.py  server.py
code_sergeant/: __init__.py  ai_client.py  config.py  controller.py  dashboard.py  judge.py  logging_utils.py  menu_bar.py  models.py  motivation_monitor.py  native_monitor.py  personality.py  phrases.py  pomodoro.py  reminders.py  screen_monitor.py  storage.py  tts.py  voice.py  xp_manager.py
scripts/: prepare_release.sh  run_tests.sh  smoke_test.sh  test_bridge_cleanup.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_ai_fallback.py  test_bridge_server.py  test_session_flow.py
tests/unit/: __init__.py  test_controller.py  test_judge.py  test_pomodoro.py  test_tts.py
