[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-sergeant"
version = "1.0.0"
description = "AI-powered productivity companion for deep work sessions"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Carlos Cueva", email = "ceo@cuevalabs.com"}
]
keywords = ["productivity", "focus", "ai", "macos", "pomodoro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]

[project.urls]
Homepage = "https://github.com/CuevaLabs/CodeSergeant"
Documentation = "https://github.com/CuevaLabs/CodeSergeant#readme"
Repository = "https://github.com/CuevaLabs/CodeSergeant.git"
Issues = "https://github.com/CuevaLabs/CodeSergeant/issues"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | \.eggs
    | build
    | dist
    | __pycache__
    | \.mypy_cache
    | CodeSergeantUI
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = [".venv", "venv", ".git", "__pycache__", "CodeSergeantUI"]
known_first_party = ["code_sergeant", "bridge"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "CodeSergeantUI",
]

[tool.pylint.main]
ignore = ["CVS", ".venv", "venv", "CodeSergeantUI"]
jobs = 0
limit-inference-results = 100
persistent = true
suggestion-mode = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "line-too-long",  # Black handles this
]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, test component interactions)",
    "e2e: End-to-end tests (slowest, full workflows)",
    "slow: Slow running tests (skip with -m 'not slow')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["code_sergeant", "bridge"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

